--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         .source-info {
             position: absolute;
-            bottom: 5px; 
+            bottom: 4px; 
             left: 50%;
             transform: translateX(-50%);
             font-size: 10px;
@@ -29,7 +29,37 @@
             bottom: 30px;
             left: 50%;
             transform: translateX(-50%);
+            -webkit-appearance: none;
+            background: #cccbcb;
+            border-radius: 5px;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: 0.2s;
+            transition: opacity 0.2s;
         } 
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none; 
+            appearance: none;
+            width: 18px; 
+            height: 18px; 
+            background: #415a8d;
+            cursor: pointer; 
+            border-radius: 50%; 
+            border: 2px solid #fff; 
+            box-shadow: 0 0 5px #000;
+        }
+        .slider::-moz-range-thumb {
+            width: 18px; 
+            height: 18px; 
+            background: #415a8d; 
+            cursor: pointer; 
+            border-radius: 50%; 
+            border: 2px solid #fff; 
+            box-shadow: 0 0 5px #000; 
+        }
+        .slider::-webkit-slider-thumb:hover, .slider::-moz-range-thumb:hover {
+            background: #6790c1; 
+        }
         .modal {
             display: none; 
             position: fixed; 
