--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 const avgTemp = count > 0 ? (sumTemp / count).toFixed(2) : "N/A";
                 document.getElementById("globalTempValue").innerText = `${avgTemp}°F`;
 
-
+                //included additional dislpay options for yearly mode
                 if (mode === "yearly") {
                     document.getElementById("globalChangeDisplay").style.display = "block";
                     document.getElementById("globalAvgDisplay").style.display = "block";
@@ -298,6 +298,7 @@
                     document.getElementById("globalAvgDisplay").style.display = "none";
                 };
 
+                //deviation from average temperature across all data points
                 const deviationTemp = (avgTemp - totalAvgTemp).toFixed(2);
                 if (deviationTemp < 0) {
                     document.getElementById("globalAvgValue").innerText = `${Math.abs(deviationTemp)}°F colder`;
@@ -311,6 +312,7 @@
                     document.getElementById("globalAvgValue").innerText = `${Math.abs(deviationTemp)}°F`;
                 };
 
+                //change from the previous year
                 let changeTemp = 0, changeCount = 0;
 
                 for (const changeCountry in yearlyData) {
