centered the map

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         svg.map {
-            display: block;
-            margin-bottom: 10%;
+            display: flex;
+            margin: auto;
         }
         h1 {
             text-align: center;
